--- a/portfolio.html
+++ b/portfolio.html
@@ -238,6 +238,17 @@
                     </li>
                 </ul>
             </div>
+            <div class="contact-form">
+                <p class="form-text">Подпишитесь на рассылку</p>
+                <form class="footer-form d-flex">
+                    <input class="form-list" type="email" name="email" id="e-mail" placeholder="E-mail" required>
+                    <button class="form-btn" type="submit">Подписаться
+                        <svg class="icon-send" width="17" height="17">
+                            <use href="./img/symbols.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
