--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <div class="input-wrap">
                         <input  class="form-input" title="+38 096 111 11 11" type="tel" name="phone-number" id="phone-number" placeholder=" " required>
                         <svg class="icon-tel icon" width="18" height="18">
-                            <use href="./img/symbols.svg#icon-phone-black-18dp-1-1"></use>
+                            <use href="./img/symbols.svg#icon-phone-black"></use>
                         </svg>
                     </div>                                                    
                 </div>
@@ -439,7 +439,7 @@
                         </svg>
                     </div>                                              
                 </div>
-                <div class="form-block">
+                <div class="form-block--last">
                     <label class="label-text" for="user-text">Комментарий</label>                  
                     <textarea class="form-message" name="user-text" id="user-text" rows="8" placeholder="Введите текст"></textarea>                 
                 </div>
